:tada: Update package

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build:server": "nest build --path tsconfig.server.json",
         "build:ui": "next build",
         "build": "yarn build:clean && yarn build:server && yarn build:ui",
-        "start": "NODE_ENV=production node .next/production-server/main.js",
+        "start": "NODE_ENV=production node dist/main.js",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"pages/**/*.ts\" \"pages/**/*.tsx\"",
         "test": "yarn test:lint && yarn test:type && yarn test:unit && yarn test:client && yarn test:e2e",
         "test:clear-cache": "jest --clearCache",
@@ -24,13 +24,13 @@
     },
     "dependencies": {
         "@babel/core": "^7.8.7",
-        "@nestjs/common": "^6.11.11",
-        "@nestjs/core": "^6.11.11",
-        "@nestjs/platform-fastify": "^6.11.11",
-        "cache-manager": "^3.1.0",
+        "@nestjs/common": "^7.0.3",
+        "@nestjs/core": "^7.0.3",
+        "@nestjs/platform-fastify": "^7.0.3",
+        "cache-manager": "^3.2.0",
         "fastify-compress": "^2.0.1",
         "nest-next": "^9.2.0",
-        "next": "^9.3.0",
+        "next": "^9.3.1",
         "preact": "^10.3.4",
         "preact-render-to-string": "^5.1.4",
         "preact-ssr-prepass": "^1.0.1",
@@ -44,8 +44,8 @@
         "@babel/polyfill": "^7.8.7",
         "@babel/preset-env": "^7.8.7",
         "@babel/preset-typescript": "^7.8.3",
-        "@nestjs/testing": "^6.11.11",
-        "@next/bundle-analyzer": "^9.3.0",
+        "@nestjs/testing": "^7.0.3",
+        "@next/bundle-analyzer": "^9.3.1",
         "@types/dotenv": "^8.2.0",
         "@types/enzyme": "^3.10.5",
         "@types/jest": "^25.1.4",
